// Copyright 2025 Cisco Systems, Inc. and its affiliates
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package outshift.identity.service.v1alpha1;

import "google/protobuf/timestamp.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/outshift/identity-service/api/server/outshift/identity/service/v1alpha1;identity_service_sdk_go";

message ApprovalRequestInfo {
  optional string caller_app = 1;

  optional string callee_app = 2;

  optional string tool_name = 3;

  optional string otp = 4;

  optional string device_id = 5;

  optional string session_id = 6;

  optional int64 timeout_in_seconds = 7;
}

// Devices used for user approval
message Device {
  // A unique identifier for the Device.
  optional string id = 1;

  // User ID associated with the Device.
  optional string user_id = 2;

  // Subscription Token for the Device.
  optional string subscription_token = 3;

  // The device human-readable name.
  optional string name = 4;

  // The creation time of the Device.
  optional .google.protobuf.Timestamp created_at = 5;
}

message Notification {
  optional string body = 1;

  optional NotificationType type = 2;

  optional ApprovalRequestInfo approval_request_info = 3;
}

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_INFO = 1;
  NOTIFICATION_TYPE_APPROVAL_REQUEST = 2;
}
_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_INFO = 1;
  NOTIFICATION_TYPE_APPROVAL_REQUEST = 2;
}
